--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
   </head>
+
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+    <!--Шапка-->
 
+    <header class="">
+      <nav class="">
+        <a class="" href="#">
+          <img class="" scr="#" width="" height=""
+            alt="Логотип сайта магазина Кэт Энерджи.">
+        </a>
+        <h1 class="">
+          Cat Energy
+        </h1>
+        <!--Надо придумать как сделать вылетающее меню-->
+      </nav>
+    </header>
+
+    <!--Приветственный текст Cat Energy-->
+    <main class="">
+      <section class="">
+        <h2 class="">
+          Функциональное питание для котов
+        </h2>
+        <p class="">
+          Занялся собой? Займись котом!
+        </p>
+        <img class="" scr="#" width="" height=""
+            alt="Фото корма с курицей">
+        <
+      </section>
+    </main>
   </body>
 </html>
