--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,8 @@
       </nav>
     </header>
 
-    <!--Приветственный текст Cat Energy-->
+    <!--Приветственный текст Cat Energy и кнопка с подбором программы-->
+
     <main class="">
       <section class="">
         <h2 class="">
@@ -34,7 +35,86 @@
         </p>
         <img class="" scr="#" width="" height=""
             alt="Фото корма с курицей">
-        <
+        <button class="" type="button">
+          Подобрать программу
+        </button>
+      </section>
+
+      <!--Выбор каталога по снижению или набору массы-->
+
+      <section class="">
+        <div class="">
+          <img class="" scr="#" width="" height=""
+          alt="Логотип худеющего котика.">
+          <h2 class="">
+            Похудение
+          </h2>
+          <p class="">
+            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+          </p>
+          <h2 class="">
+            Каталог slim
+          </h2>
+          <a class="" href="#">
+            <img class="" scr="#" width="" height=""
+              alt="Стрелочка с переходом в каталогу питания для похудания.">
+          </a>
+        </div>
+        <div class="">
+          <img class="" scr="#" width="" height=""
+          alt="Логотип котика, который набирает массу.">
+          <h2 class="">
+            Набор массы
+          </h2>
+          <p class="">
+            Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+          </p>
+          <h2 class="">
+            Каталог pro
+          </h2>
+          <a class="" href="#">
+            <img class="" scr="#" width="" height=""
+              alt="Стрелочка с переходом в каталогу питания для набора массы.">
+          </a>
+        </div>
+      </section>
+
+      <!--Приемущества корма/Функционал корма-->
+
+      <section class="">
+        <h2 class="">
+          Как это работает
+        </h2>
+        <ul class="">
+          <li class="">
+            <img class="" src="" width="" height=""
+            alt="Логотип фунцкионального питания.">
+            <p class="">
+              Функциональное питание содержит только полезные питательные вещества.
+            </p>
+          </li>
+          <li class="">
+            <img class="" src="" width="" height=""
+            alt="Логотип выпуск в виде порошка.">
+            <p class="">
+              Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+            </p>
+          </li>
+          <li class="">
+            <img class="" src="" width="" height=""
+            alt="Логотип замены приёма пищи.">
+            <p class="">
+              Замените один-два приёма обычной еды на наше функциональное питание.
+            </p>
+          </li>
+          <li class="">
+            <img class="" src="" width="" height=""
+            alt="Логотип часов">
+            <p class="">
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца.
+            </p>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
