Делает секцию с живым примером

--- a/source/index.html
+++ b/source/index.html
@@ -116,6 +116,35 @@
           </li>
         </ul>
       </section>
+
+      <!--Живой пример-->
+
+      <section class="">
+        <h2 class="">
+          Живой пример
+        </h2>
+        <p class="">
+          Борис сбросилл 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по прежднему спит по 16 часов в день.
+        </p>
+        <h3 class="">
+          5 кг
+        </h3>
+        <p class="">
+          Снижение веса
+        </p>
+        <h3 class="">
+          5 кг
+        </h3>
+        <p class="">
+          Затрачено времени
+        </p>
+        <h3 class="">
+          Затраты на питание: 15 000 руб.
+        </h3>
+        <img class="" src="" width="" height=""
+        alt="Изображение меняющегося кота">
+        <!--Тут должен быть слайдер-->
+      </section>
     </main>
   </body>
 </html>
