Доделывает первую страничку без классов

--- a/source/index.html
+++ b/source/index.html
@@ -146,5 +146,75 @@
         <!--Тут должен быть слайдер-->
       </section>
     </main>
+
+    <!--Футер-->
+
+    <footer class="">
+
+      <!--Контакты и карта-->
+
+      <section class="">
+        <h2 class="">
+          Приглашаем к сорундичеству диллеров!
+        </h2>
+        <p class="">
+          ул. Большая Конюшенная, д.19/8 <br> Санкт-Петербург
+        </p>
+        <!--Тут будет карта-->
+      </section>
+
+      <!--Лого Cat Energy-->
+
+      <section class="" >
+        <h2 class="">Логотив  Cat Energy.</h2>
+        <a class="" href="#">
+          <svg class="">
+          </svg>
+        </a>
+      </section>
+
+      <!--Социальные сети-->
+
+      <section class="footer-social">
+        <h2 class="visually-hidden">Социальные сети.</h2>
+        <ul class="footer-social-list reset-list">
+          <li class="footer-social-item">
+            <a class="social-icons" href="https://vk.com/htmlacademy">
+              <svg class="social-media">
+              </svg>
+              <span class="visually-hidden">Vkontakte.</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="social-icons" href="https://www.youtube.com/user/htmlacademyru">
+              <svg class="social-media">
+              </svg>
+              <span class="visually-hidden">Youtube.</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="social-icons" href="https://t.me/htmlacademy">
+              <svg class="social-media">
+              </svg>
+              <span class="visually-hidden">Telegram.</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <!--Лого Html Academy-->
+
+      <section class="footer-logo">
+        <h2 class="">
+          HTML Academy
+        </h2>
+        <a class="footer-logo-htmlacademy" href="https://htmlacademy.ru/">
+          <svg class="html-logo">
+          </svg>
+          <span class="visually-hidden">Логотип htmlacadem.</span>
+        </a>
+      </section>
+    </footer>
+    </footer>
   </body>
 </html>
