--- a/source/index.html
+++ b/source/index.html
@@ -10,107 +10,105 @@
 
     <!--Шапка-->
 
-    <header class="">
-      <nav class="">
-        <a class="" href="#">
+    <header class="main-header">
+      <nav class="navigation">
+        <a class="navigation__logo" href="#">
           <img class="" scr="#" width="" height=""
             alt="Логотип сайта магазина Кэт Энерджи.">
         </a>
-        <h1 class="">
+        <h1 class="navigation__title">
           Cat Energy
         </h1>
-        <!--Надо придумать как сделать вылетающее меню-->
+        <button class="navigation__menu" type="button">
       </nav>
     </header>
+    <main class="main-index">
 
-    <!--Приветственный текст Cat Energy и кнопка с подбором программы-->
+      <!--Приветственный текст Cat Energy и кнопка с подбором программы-->
 
-    <main class="">
-      <section class="">
-        <h2 class="">
+      <section class="start-info">
+        <h2 class="start-info__title">
           Функциональное питание для котов
         </h2>
-        <p class="">
+        <p class="start-info__subtitle">
           Занялся собой? Займись котом!
         </p>
-        <img class="" scr="#" width="" height=""
+        <img class="start-info__food-image" scr="#" width="" height=""
             alt="Фото корма с курицей">
-        <button class="" type="button">
+        <button class="start-info__find-program" type="button">
           Подобрать программу
         </button>
       </section>
 
       <!--Выбор каталога по снижению или набору массы-->
 
-      <section class="">
-        <div class="">
+      <section class="sliming">
+        <img class="slimig__slim-cat" scr="#" width="" height=""
+        alt="Логотип худеющего котика.">
+        <h2 class="sliming__title">
+          Похудение
+        </h2>
+        <p class="sliming__subtitle">
+          Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+        </p>
+        <h2 class="sliming__catalog-title catalog-title">
+          Каталог slim
+        </h2>
+        <a class="sliming__catalog-slim-link" href="#">
           <img class="" scr="#" width="" height=""
-          alt="Логотип худеющего котика.">
-          <h2 class="">
-            Похудение
-          </h2>
-          <p class="">
-            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-          </p>
-          <h2 class="">
-            Каталог slim
-          </h2>
-          <a class="" href="#">
-            <img class="" scr="#" width="" height=""
-              alt="Стрелочка с переходом в каталогу питания для похудания.">
-          </a>
-        </div>
-        <div class="">
+            alt="Стрелочка с переходом в каталогу питания для похудания.">
+        </a>
+      </section>
+      <section class="weighting">
+        <img class="weighting__weight-cat" scr="#";
+        alt="Логотип котика, который набирает массу.">
+        <h2 class="weighting__title">
+          Набор массы
+        </h2>
+        <p class="weighting__weighting-subtitle">
+          Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+        </p>
+        <h2 class="weighting__catalog-title">
+          Каталог pro
+        </h2>
+        <a class="weighting__catalog-weight-link" href="#">
           <img class="" scr="#" width="" height=""
-          alt="Логотип котика, который набирает массу.">
-          <h2 class="">
-            Набор массы
-          </h2>
-          <p class="">
-            Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-          </p>
-          <h2 class="">
-            Каталог pro
-          </h2>
-          <a class="" href="#">
-            <img class="" scr="#" width="" height=""
-              alt="Стрелочка с переходом в каталогу питания для набора массы.">
-          </a>
-        </div>
+            alt="Стрелочка с переходом в каталогу питания для набора массы.">
+        </a>
       </section>
 
       <!--Приемущества корма/Функционал корма-->
 
-      <section class="">
-        <h2 class="">
+      <section class="advantages">
+        <h2 class="advantages__title">
           Как это работает
         </h2>
-        <ul class="">
-          <li class="">
-            <img class="" src="" width="" height=""
+        <ul class="advantages__list">
+          <li class="advantages__item">
+            <img class="advantages__logo-nutrition functional" src="" width="" height=""
             alt="Логотип фунцкионального питания.">
-            <p class="">
+            <p class="advantages__subtitle">
               Функциональное питание содержит только полезные питательные вещества.
             </p>
           </li>
-          <li class="">
-            <img class="" src="" width="" height=""
+          <li class="advantages__item">
+            <img class="advantages__logo-nutrition powder" src="" width="" height=""
             alt="Логотип выпуск в виде порошка.">
-            <p class="">
+            <p class="advantages__subtitle">
               Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
             </p>
           </li>
-          <li class="">
-            <img class="" src="" width="" height=""
+          <li class="advantages__item">
+            <img class="advantages__logo-nutrition food-replacement" src="" width="" height=""
             alt="Логотип замены приёма пищи.">
-            <p class="">
+            <p class="advantages__subtitle">
               Замените один-два приёма обычной еды на наше функциональное питание.
             </p>
           </li>
-          <li class="">
-            <img class="" src="" width="" height=""
+          <li class="advantages__item">
+            <img class="advantages__logo-nutrition clock" src="" width="" height=""
             alt="Логотип часов">
-            <p class="">
+            <p class="advantages__subtitle">
               Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца.
             </p>
           </li>
@@ -119,29 +117,29 @@
 
       <!--Живой пример-->
 
-      <section class="">
-        <h2 class="">
+      <section class="example">
+        <h2 class="example__title">
           Живой пример
         </h2>
-        <p class="">
+        <p class="example__subtitle">
           Борис сбросилл 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по прежднему спит по 16 часов в день.
         </p>
-        <h3 class="">
+        <h3 class="example__kilos-title">
           5 кг
         </h3>
-        <p class="">
+        <p class="example__kilos-subtitle">
           Снижение веса
         </p>
-        <h3 class="">
-          5 кг
+        <h3 class="example__time-title">
+          60 дней
         </h3>
-        <p class="">
+        <p class="example__time-subtitle">
           Затрачено времени
         </p>
-        <h3 class="">
+        <h3 class="example__price">
           Затраты на питание: 15 000 руб.
         </h3>
-        <img class="" src="" width="" height=""
+        <img class="example__change-cat-photo" src="" width="" height=""
         alt="Изображение меняющегося кота">
         <!--Тут должен быть слайдер-->
       </section>
@@ -149,15 +147,15 @@
 
     <!--Футер-->
 
-    <footer class="">
+    <footer class="footer">
 
       <!--Контакты и карта-->
 
-      <section class="">
-        <h2 class="">
+      <section class="footer-contacts">
+        <h2 class="footer-contacts__title">
           Приглашаем к сорундичеству диллеров!
         </h2>
-        <p class="">
+        <p class="footer-contacts__subtitle">
           ул. Большая Конюшенная, д.19/8 <br> Санкт-Петербург
         </p>
         <!--Тут будет карта-->
@@ -165,10 +163,10 @@
 
       <!--Лого Cat Energy-->
 
-      <section class="" >
-        <h2 class="">Логотив  Cat Energy.</h2>
-        <a class="" href="#">
-          <svg class="">
+      <section class="nutrition-logo" >
+        <h2 class="nutrition-logo__title">Логотив  Cat Energy.</h2>
+        <a class="nutrition-logo__link" href="#">
+          <svg class="nutrition-logo__cat-logo">
           </svg>
         </a>
       </section>
@@ -177,24 +175,24 @@
 
       <section class="footer-social">
         <h2 class="visually-hidden">Социальные сети.</h2>
-        <ul class="footer-social-list reset-list">
-          <li class="footer-social-item">
-            <a class="social-icons" href="https://vk.com/htmlacademy">
-              <svg class="social-media">
+        <ul class="footer-social__list">
+          <li class="footer-social__item">
+            <a class="footer-social__social-icons" href="https://vk.com/htmlacademy">
+              <svg class="footer-social__social-media">
               </svg>
               <span class="visually-hidden">Vkontakte.</span>
             </a>
           </li>
-          <li class="footer-social-item">
-            <a class="social-icons" href="https://www.youtube.com/user/htmlacademyru">
-              <svg class="social-media">
+          <li class="footer-social__item">
+            <a class="footer-social__social-icons" href="https://www.youtube.com/user/htmlacademyru">
+              <svg class="footer-social__social-media">
               </svg>
               <span class="visually-hidden">Youtube.</span>
             </a>
           </li>
-          <li class="footer-social-item">
-            <a class="social-icons" href="https://t.me/htmlacademy">
-              <svg class="social-media">
+          <li class="footer-social__item">
+            <a class="footer-social__social-icons" href="https://t.me/htmlacademy">
+              <svg class="footer-social__social-media">
               </svg>
               <span class="visually-hidden">Telegram.</span>
             </a>
@@ -205,11 +203,11 @@
       <!--Лого Html Academy-->
 
       <section class="footer-logo">
-        <h2 class="">
+        <h2 class="footer-logo__title">
           HTML Academy
         </h2>
-        <a class="footer-logo-htmlacademy" href="https://htmlacademy.ru/">
-          <svg class="html-logo">
+        <a class="footer-logo__htmlacademy-link" href="https://htmlacademy.ru/">
+          <svg class="footer-logo__html-logo">
           </svg>
           <span class="visually-hidden">Логотип htmlacadem.</span>
         </a>
