Делает разметку в catalog

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -51,7 +51,223 @@
         </a>
       </section>
 
+      <main-inner>
 
+      <!--Карточки товаров-->
+
+        <section class="products">
+          <h2 class="products__title">
+            Каталог продукции
+          </h2>
+          <ul class="products__product-list">
+            <li class="products__product-card">
+              <img class="products__product-image" alt="Корм с курицей 500гр">
+              <h3 class="products__product-card-title">
+                Сat energy pro 500 г"
+              </h3>
+              <p class="products__product-weigh">
+                Масса 500 г
+              </p>
+              <p class="products__product-taste">
+                Вкус Курица
+              </p>
+              <p class="products__product-price">
+                Цена 700 р.
+              </p>
+              <button class="products__product-button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="products__product-card">
+              <img class="products__product-image" alt="Корм с курицей 500гр">
+              <h3 class="products__product-card-title">
+                Сat energy pro 1000 г"
+              </h3>
+              <p class="products__product-weigh">
+                Масса 1000 г
+              </p>
+              <p class="products__product-taste">
+                Вкус Курица
+              </p>
+              <p class="products__product-price">
+                Цена 1000 р.
+              </p>
+              <button class="products__product-button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="products__product-card">
+              <img class="products__product-image" alt="Корм с курицей 500гр">
+              <h3 class="products__product-card-title">
+                Сat energy pro 500 г"
+              </h3>
+              <p class="products__product-weigh">
+                Масса 500 г
+              </p>
+              <p class="products__product-taste">
+                Вкус рыба
+              </p>
+              <p class="products__product-price">
+                Цена 700 р.
+              </p>
+              <button class="products__product-button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="products__product-card">
+              <img class="products__product-image" alt="Корм с курицей 500гр">
+              <h3 class="products__product-card-title">
+                Сat energy pro 1000 г"
+              </h3>
+              <p class="products__product-weigh">
+                Масса 1000 г
+              </p>
+              <p class="products__product-taste">
+                Вкус рыба
+              </p>
+              <p class="products__product-price">
+                Цена 1000 р.
+              </p>
+              <button class="products__product-button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="products__product-card">
+              <img class="products__product-image" alt="Корм с курицей 500гр">
+              <h3 class="products__product-card-title">
+                Сat energy pro 500 г"
+              </h3>
+              <p class="products__product-weigh">
+                Масса 500 г
+              </p>
+              <p class="products__product-taste">
+                Вкус гречка
+              </p>
+              <p class="products__product-price">
+                Цена 400 р.
+              </p>
+              <button class="products__product-button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="products__product-card">
+              <img class="products__product-image" alt="Корм с курицей 500гр">
+              <h3 class="products__product-card-title">
+                Сat energy pro 1000 г"
+              </h3>
+              <p class="products__product-weigh">
+                Масса 1000 г
+              </p>
+              <p class="products__product-taste">
+                Вкус гречка
+              </p>
+              <p class="products__product-price">
+                Цена 700 р.
+              </p>
+              <button class="products__product-button" type="button">
+                Заказать
+              </button>
+            </li>
+          </ul>
+        </section>
+
+        <!--Показать ещё-->
+        <section class="more">
+          <a class="more__link" href="#">
+            <h2 class="visually-hidden">
+              Показать ещё товары.
+            </h2>
+          </a>
+          <h2 class="more__title">
+            Показать ещё 100500 товаров
+          </h2>
+          <p class="more__subtitle">
+            На самом деле вкусов гораздо больше
+          </p>
+          <button class="more__more-button" type="button">
+            Показать всё
+          </button>
+        </section>
+
+        <!--Дополнительные товары-->
+
+        <section class="additional-products">
+          <h2 class="additional-products__title">
+            Дополнительные товары
+          </h2>
+          <ul class="additional-products__product-list">
+            <li class="additional-products__product-card">
+              <h3 class="additional-products__product-card-title">
+                Сахарозаменитель
+              </h3>
+              <p class="additional-products__product-weigh">
+                1 упаковка ( 100 г )
+              </p>
+              <p class="additional-products__product-price">
+                200 р.
+              </p>
+              <button class="additional-products__product-button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="additional-products__product-card">
+              <h3 class="additional-products__product-card-title">
+                Питьевая вода
+              </h3>
+              <p class="additional-products__product-weigh">
+                5 литров
+              </p>
+              <p class="additional-products__product-price">
+                50 р.
+              </p>
+              <button class="additional-products__product-button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="additional-products__product-card">
+              <h3 class="additional-products__product-card-title">
+                Молоко
+              </h3>
+              <p class="additional-products__product-weigh">
+                1 литр
+              </p>
+              <p class="additional-products__product-price">
+                100 р.
+              </p>
+              <button class="additional-products__product-button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="additional-products__product-card">
+              <h3 class="additional-products__product-card-title">
+                Витамины
+              </h3>
+              <p class="additional-products__product-weigh">
+                1 упаковка ( 300 г )
+              </p>
+              <p class="additional-products__product-price">
+                300 р.
+              </p>
+              <button class="additional-products__product-button" type="button">
+                Заказать
+              </button>
+            </li>
+        </section>
+
+        <!--Подарок-->
+
+        <section class="present">
+          <h2 class="present__subtitle visually-hidden">Подарок.</h2>
+          <a class="present__link" href="#">
+            <svg aria-hidden="true" focusable="false">
+            </svg>
+          </a>
+          <p class="present__subtitle">
+            Закажите всё и получите чехол для кота в подарок
+          </p>
+        </section>
+
+      </main-inner>
 
       <!--Социальные сети-->
 
