--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,57 +1,52 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
+    <title>HTML Academy: Cat Enegry</title>
   </head>
 
-  <body>
+  <body class="page__body">
 
     <!--Шапка-->
 
     <header class="main-header">
-      <nav class="navigation">
-        <a class="navigation__logo" href="#">
-          <img class="" scr="#" width="" height=""
-            alt="Логотип сайта магазина Кэт Энерджи.">
-        </a>
-        <h1 class="navigation__title">
-          Cat Energy
-        </h1>
-        <button class="navigation__menu" type="button">
+      <a class="main-header__logo" href="#">
+        <img class="main-header__logo-image" scr="#" width="#" height="#"
+          alt="Логотип сайта магазина Cat Enargy.">
+      </a>
+      <h1 class="main-header__title">
+        Cat Energy
+      </h1>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">
+            Открыть меню.
+          </span>
+        </button>
+        <div class="main-nav__wrapper">
+           <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--current">
+              <a href="#">
+                Главная
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a href="catalog.html">
+                Каталог продукции
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a class="" href="form.html">
+                Подбор программы
+              </a>
+            </li>
+           </ul>
+        </div>
       </nav>
     </header>
-    <main class="main-index">
 
-
-          <!--Футер-->
-
-    <footer class="footer">
-
-      <!--Контакты и карта-->
-
-      <section class="footer-contacts">
-        <h2 class="footer-contacts__title">
-          Приглашаем к сорундичеству диллеров!
-        </h2>
-        <p class="footer-contacts__subtitle">
-          ул. Большая Конюшенная, д.19/8 <br> Санкт-Петербург
-        </p>
-        <!--Тут будет карта-->
-      </section>
-
-      <!--Лого Cat Energy-->
-
-      <section class="nutrition-logo" >
-        <h2 class="nutrition-logo__title">Логотив  Cat Energy.</h2>
-        <a class="nutrition-logo__link" href="#">
-          <svg class="nutrition-logo__cat-logo">
-          </svg>
-        </a>
-      </section>
-
-      <main-inner>
+    <main class="main-inner">
 
       <!--Карточки товаров-->
 
@@ -252,6 +247,7 @@
                 Заказать
               </button>
             </li>
+          </ul>
         </section>
 
         <!--Подарок-->
@@ -266,11 +262,33 @@
             Закажите всё и получите чехол для кота в подарок
           </p>
         </section>
+    </main>
 
-      </main-inner>
+          <!--Футер-->
 
-      <!--Социальные сети-->
+    <footer class="footer">
 
+      <!--Контакты и карта-->
+
+      <section class="footer-contacts">
+        <h2 class="footer-contacts__title">
+          Приглашаем к сорундичеству диллеров!
+        </h2>
+        <p class="footer-contacts__subtitle">
+          ул. Большая Конюшенная, д.19/8 <br> Санкт-Петербург
+        </p>
+        <!--Тут будет карта-->
+      </section>
+
+      <!--Лого Cat Energy-->
+
+      <section class="nutrition-logo" >
+        <h2 class="nutrition-logo__title">Логотив  Cat Energy.</h2>
+        <a class="nutrition-logo__link" href="#">
+          <svg class="nutrition-logo__cat-logo">
+          </svg>
+        </a>
+      </section>
       <section class="footer-social">
         <h2 class="visually-hidden">Социальные сети.</h2>
         <ul class="footer-social__list">
@@ -310,7 +328,6 @@
           <span class="visually-hidden">Логотип htmlacadem.</span>
         </a>
       </section>
-    </footer>
     </footer>
   </body>
 </html>
